# vnemath

./: .clang-tidy  .gitmodules  CMakeLists.txt  CODING_GUIDELINES.md  LICENSE  README.md  codecov.yml
.copilot/: coding-guidelines.md
.github/workflows/: ci.yml
cmake/: FindVneMath.cmake
configs/: config.h.in
examples/: CMakeLists.txt
examples/01_hello_math/: CMakeLists.txt  README.md  main.cpp
examples/02_multibackend_projection/: CMakeLists.txt  README.md  main.cpp
examples/03_camera_controller/: CMakeLists.txt  README.md  fps_camera.h  main.cpp  orbital_camera.h
examples/04_frustum_culling/: CMakeLists.txt  README.md  main.cpp  scene_object.h
examples/05_scene_graph/: CMakeLists.txt  README.md  main.cpp
examples/06_ray_intersection/: CMakeLists.txt  README.md  main.cpp
examples/07_color_utilities/: CMakeLists.txt  README.md  main.cpp
examples/08_gpu_buffer_alignment/: CMakeLists.txt  README.md  main.cpp
examples/09_easing_intersection/: CMakeLists.txt  README.md  main.cpp
examples/10_curves_animation/: CMakeLists.txt  README.md  main.cpp
examples/11_noise_generation/: CMakeLists.txt  README.md  main.cpp
examples/12_transform_decomposition/: CMakeLists.txt  README.md  main.cpp
examples/common/: color_utils.h  graphics_utils.h  logging_guard.h
include/vertexnova/math/: color.h  constants.h  curves.h  easing.h  gpu_types.h  mat3x3f.h  mat4x4f.h  math.h  math_utils.h  noise.h  projection_utils.h  quaternion.h  random.h  statistic.h  transform_node.h  transform_utils.h  vec2f.h  vec3f.h  vec4f.h  viewport.h
include/vertexnova/math/core/: color.h  constants.h  core.h  mat.h  mat3x3f.h  mat4x4f.h  math_utils.h  quat.h  transform_node.h  types.h  vec.h
include/vertexnova/math/geometry/: aabb.h  capsule.h  frustum.h  geometry.h  intersection.h  line.h  line_segment.h  obb.h  plane.h  ray.h  rect.h  sphere.h  triangle.h
scripts/: build_linux.sh  build_macos.sh  clang_tidy_analyzer.py  cppcheck_analyzer.py  run-clang-format.sh  run-clang-tidy.sh  static_analyzer.py
src/: CMakeLists.txt
src/vertexnova/math/: color.cpp  mat3x3f.cpp  mat4x4f.cpp  quaternion.cpp  transform_node.cpp  vec2f.cpp  vec3f.cpp  vec4f.cpp
src/vertexnova/math/geometry/: aabb.cpp  capsule.cpp  frustum.cpp  line.cpp  line_segment.cpp  obb.cpp  plane.cpp  ray.cpp  rect.cpp  sphere.cpp  triangle.cpp
tests/: CMakeLists.txt  main.cpp
tests/math/: angle_utils_test.cpp  camera_test.cpp  color_test.cpp  curves_test.cpp  easing_test.cpp  gpu_types_test.cpp  graphics_api_test.cpp  mat3x3f_test.cpp  mat4x4f_test.cpp  math_utils_test.cpp  noise_test.cpp  quaternion_test.cpp  random_test.cpp  statistic_test.cpp  transform_node_test.cpp  transform_utils_test.cpp  vec2f_test.cpp  vec3f_test.cpp  vec4f_test.cpp
tests/math/core/: mat_test.cpp  quat_test.cpp  vec_test.cpp
tests/math/geometry/: aabb_test.cpp  capsule_test.cpp  culling_test.cpp  frustum_test.cpp  intersection_test.cpp  line_segment_test.cpp  line_test.cpp  obb_test.cpp  plane_test.cpp  ray_test.cpp  rect_test.cpp  sphere_test.cpp  triangle_test.cpp
